aot for native library