@@ -2,14 +2,6 @@
 
 set -eou pipefail
 
-cd "$(dirname "$0")"
-
-echo "testing jar in JVM"
-
-clojure -J--add-opens=java.base/java.nio=ALL-UNNAMED -J--add-opens=java.base/sun.nio.ch=ALL-UNNAMED -J--illegal-access=permit -X test-jar.core/run
-
-echo "testing uberjar in GraalVM native image"
-
 if [ -z "$GRAALVM_HOME" ]; then
     echo "Please set GRAALVM_HOME"
     exit 1
@@ -18,11 +10,12 @@ fi
 export JAVA_HOME=$GRAALVM_HOME
 export PATH=$GRAALVM_HOME/bin:$PATH
 
-clojure -X:uberjar :jar target/test-jar.jar 
+lein uberjar
+#clojure -X:uberjar :jar target/test-jar-0.5.10-standalone.jar
+
 
 "$GRAALVM_HOME/bin/native-image" \
-    --initialize-at-build-time \
-    -jar target/test-jar.jar \
+    -jar target/test-jar-0.5.10-standalone.jar \
     jar-test
 
 # ./jar-test
